# postkeeper

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Cross.toml  DESIGN.md  README.md  build.rs  milter.pc
assets/: postkeeper.service  postkeeper.sh
assets/etc/: allow.map  block.map  postkeeper.ini
assets/maintainer-scripts/: postinst  preinst
src/: cli.yml  config.rs  consts.rs  error.rs  main.rs  milter.rs  prelude.rs
src/maps/: map_parser.rs  mod.rs
tests/: test_allow.map  test_block.map
tests/conf.d/: invalid-allow-map.ini  invalid-block-map.ini  invalid-logfile.ini  invalid-socket.ini  valid.ini
