[package]
name = "postkeeper"
version = "0.3.0"
authors = ["Enhance Ltd <backend@enhance.com>"]
edition = "2018"
default-run = "postkeeper"
categories = ["email"]
keywords = ["email", "milter", "allowlist", "blocklist", "blacklist", "whitelist"]
license = "GPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
daemonize = "0.4"
lazy_static = "1.4"
libc = "0.2"
log= "0.4"
milter = "0.2"
once_cell = "1.3"
rust-ini = "0.15"
simple_logger = "1.6" # simple_logger allows us to set logging level from config

[dev-dependencies]
pretty_assertions = "0.6"

# Metadata for Debian Package Builder `cargo-deb`
[package.metadata.deb]
maintainer = "Enhance Ltd <backend@enhance.com>"
copyright = "2020, Enhance Ltd <backend@enhance.com>"
license-file = ["LICENSE"]
extended-description = """\
Simple Allow/Block list milter for postfix\
"""
# try autogenerate dependencies for .deb installer
depends = "$auto, procps"
# debian application category
section = "mail"
priority = "optional"
# deb package maintainer scripts
maintainer-scripts = "assets/maintainer-scripts"
# files to copy on install
assets = [
    ["target/release/postkeeper", "/usr/sbin/", "755"],
    ["assets/postkeeper.sh", "/etc/init.d/postkeeper", "755"],
    ["assets/postkeeper.service", "/etc/systemd/system/", "755"],
    ["assets/etc/postkeeper.ini", "/etc/postkeeper/", "664"],
    ["assets/etc/allow.map", "/etc/postkeeper/", "664"],
    ["assets/etc/block.map", "/etc/postkeeper/", "664"],
    ["README.md", "usr/share/doc/postkeeper/README", "644"],
]
# do not overwrite these files on package update
conf-files = [
    "/etc/postkeeper/postkeeper.ini", 
    "/etc/postkeeper/allow.map", 
    "/etc/postkeeper/block.map" 
    ]
